// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`test/examples/cte.sqllogictest #1 statement ok: CREATE TABLE t1(a INTEGER, b INTEGER) 1`] = `
"(CmdList
  (CreateTableStmt :temporary false :ifNotExists false
    (QualifiedName
      (Name :text "t1"))
    (ColumnsAndConstraintsCreateTableBody :flags 0
      (ColumnDefinition :flags 4
        (Name :text "a")
        (Type :name "INTEGER"))
      (ColumnDefinition :flags 4
        (Name :text "b")
        (Type :name "INTEGER")))))"
`;

exports[`test/examples/cte.sqllogictest #2 statement ok: WITH RECURSIVE counter(n) AS ( SELECT 1 UNION ALL SELECT n… 1`] = `
"(CmdList
  (SelectStmt
    (Select
      (With :recursive true
        (CommonTableExpr :materialized "Any"
          (Name :text "counter")
          (IndexedColumn
            (Name :text "n"))
          (Select
            (SelectFrom
              (ExprResultColumn
                (NumericLiteral :value "1")))
            (CompoundSelect :operator "UnionAll"
              (SelectFrom
                (ExprResultColumn
                  (BinaryExpr :op "Add"
                    (Id :name "n")
                    (NumericLiteral :value "1")))
                (FromClause
                  (TableSelectTable
                    (QualifiedName
                      (Name :text "counter"))))
                (BinaryExpr :op "Less"
                  (Id :name "n")
                  (NumericLiteral :value "10")))))))
      (SelectFrom
        (StarResultColumn)
        (FromClause
          (TableSelectTable
            (QualifiedName
              (Name :text "counter"))))))))"
`;

exports[`test/examples/cte.sqllogictest #3 statement ok: WITH c1 AS MATERIALIZED (SELECT a FROM t1) SELECT * FROM c1 1`] = `
"(CmdList
  (SelectStmt
    (Select
      (With :recursive false
        (CommonTableExpr :materialized "Yes"
          (Name :text "c1")
          (Select
            (SelectFrom
              (ExprResultColumn
                (Id :name "a"))
              (FromClause
                (TableSelectTable
                  (QualifiedName
                    (Name :text "t1"))))))))
      (SelectFrom
        (StarResultColumn)
        (FromClause
          (TableSelectTable
            (QualifiedName
              (Name :text "c1"))))))))"
`;

exports[`test/examples/cte.sqllogictest #4 statement ok: WITH c2 AS NOT MATERIALIZED (SELECT a FROM t1) SELECT * FRO… 1`] = `
"(CmdList
  (SelectStmt
    (Select
      (With :recursive false
        (CommonTableExpr :materialized "No"
          (Name :text "c2")
          (Select
            (SelectFrom
              (ExprResultColumn
                (Id :name "a"))
              (FromClause
                (TableSelectTable
                  (QualifiedName
                    (Name :text "t1"))))))))
      (SelectFrom
        (StarResultColumn)
        (FromClause
          (TableSelectTable
            (QualifiedName
              (Name :text "c2"))))))))"
`;

exports[`test/examples/cte.sqllogictest #5 statement ok: WITH RECURSIVE base AS MATERIALIZED (SELECT 1 AS n), rec(n)… 1`] = `
"(CmdList
  (SelectStmt
    (Select
      (With :recursive true
        (CommonTableExpr :materialized "Yes"
          (Name :text "base")
          (Select
            (SelectFrom
              (ExprResultColumn
                (NumericLiteral :value "1")
                (AsAs
                  (Name :text "n"))))))
        (CommonTableExpr :materialized "No"
          (Name :text "rec")
          (IndexedColumn
            (Name :text "n"))
          (Select
            (SelectFrom
              (ExprResultColumn
                (Id :name "n"))
              (FromClause
                (TableSelectTable
                  (QualifiedName
                    (Name :text "base")))))
            (CompoundSelect :operator "UnionAll"
              (SelectFrom
                (ExprResultColumn
                  (BinaryExpr :op "Add"
                    (Id :name "n")
                    (NumericLiteral :value "1")))
                (FromClause
                  (TableSelectTable
                    (QualifiedName
                      (Name :text "rec"))))
                (BinaryExpr :op "Less"
                  (Id :name "n")
                  (NumericLiteral :value "5")))))))
      (SelectFrom
        (StarResultColumn)
        (FromClause
          (TableSelectTable
            (QualifiedName
              (Name :text "rec"))))))))"
`;
